[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "multi-tool-agent"
version = "0.8.0"
description = "多工具智能助理 - LangGraph Agent Skeleton"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "openai>=1.60.0",
    "langgraph-checkpoint>=2.0.0",
    "chromadb>=0.6.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.115.0",
    "streamlit>=1.40.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    "nest-asyncio>=1.6.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]
[project.scripts]
cli = "core.agent_graph:main"
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["asyncio: mark test as async"]
filterwarnings = ["ignore::DeprecationWarning"]
[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]
[tool.ruff.format]
quote-style = "double"
[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disallow_any_unimported = false
disallow_subclassing_any = false
warn_unused_ignores = true
exclude = ["tests/", ".venv/", "venv/"]
[tool.coverage.run]
source = ["core", "config", "storage", "memory", "tools", "frontend"]
omit = [
    "tests/*",
    "**/__init__.py",
    "frontend/app.py",   # Streamlit UI渲染层，依赖浏览器集成测试，不纳入单元覆盖率统计
]
[tool.coverage.report]
fail_under = 80
